增强了网格布局

--- a/package.json
+++ b/package.json
@@ -6,6 +6,6 @@
   "scripts": {
     "dev": "scss --watch scss:css --style compact"
   },
-  "author": "",
+  "author": "xianziycg@gmail.com",
   "license": "ISC"
 }
