--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "scss --watch scss:css --style compact"
+    "dev": "scss --watch ./scss/index.scss:./css/index.css --style compact",
+    "build": "scss ./scss/index.scss:./css/index.min.css --style compressed"
   },
   "author": "xianziycg@gmail.com",
   "license": "ISC"
