--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "npx node-sass --output-style=compact scss/build -o dist",
-    "build:compressed": "npx node-sass --output-style=compressed scss/build -o dist"
+    "build:compressed": "npx node-sass --output-style=compressed scss/build -o dist\nnode build.js"
   },
   "author": "xianziycg@gmail.com",
   "license": "ISC",
