--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "npx node-sass --output-style=compact scss/build -o dist\nbuild.js"
+    "build": "npx node-sass --output-style=compact scss/build -o dist\nnode build.js"
   },
   "author": "xianziycg@gmail.com",
   "license": "ISC",
